# srt-translator

./: .dockerignore  .env  .env-prod  .gitignore  .gitpod.yml  README.md  app.py  docker_build.sh  docker_push.sh  docker_run.sh  docker_run_daemon.sh  dockerfile  dockerfile-daemon  env_example  libraries.py  pyproject.toml  run_translate.ps1  unit_test.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docs/: Insomnia_HTTP_Rerquest.yaml
test-data/: test.en.srt  test.srt
test-data/test/The.Lord.of.the.Rings.S01E01/: 2_English.srt  39_Thai.srt  3_English.srt  42_Vietnamese.srt  43_Chinese.srt  44_Chinese.srt
test-data/test/The.Lord.of.the.Rings.S01E02/: 2_English.srt  38_Thai.srt  3_English.srt  41_Vietnamese.srt  42_Chinese.srt  43_Chinese.srt
test-data/test/The.Lord.of.the.Rings.S01E03/: 2_English.srt  39_Thai.srt  3_English.srt  42_Vietnamese.srt
