[tool.poetry]
name = "srt-translator"
version = "0.4"
repository = "https://github.com/SteveZhengMe/srt-translator"
keywords = ["srt", "subtitle", "OpenAI", "DeepL"]
description = "Translate subtitle files to your language"
authors = ["Steve Zheng"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "./*.py"}]

[tool.poetry.dependencies]
python = "^3.8"
deepl = "^1.15.0"
openai = "^0.27.8"
srt = "^3.5.3"
typer = "^0.9.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"